syntax = "proto3";

import "yandex/cloud/priv/datasphere/v2/lzy-zygote.proto";
import "yandex/cloud/priv/datasphere/v2/lzy-servant.proto";
import "yandex/cloud/priv/datasphere/v2/lzy-task.proto";
import "yandex/cloud/priv/datasphere/v2/lzy-channel.proto";
import "yandex/cloud/priv/datasphere/v2/lzy-auth.proto";

package yandex.cloud.priv.datasphere.v2;

option go_package = "datasphere";
option java_outer_classname = "Lzy";
option java_package = "yandex.cloud.priv.datasphere.v2.lzy";

service LzyServer {
  rpc Publish (PublishRequest) returns (RegisteredZygote);
  rpc Zygotes (Auth) returns (ZygoteList);

  rpc Task (TaskCommand) returns (TaskStatus);
  rpc Channel (ChannelCommand) returns (ChannelStatus);

  rpc TasksStatus (Auth) returns (TasksList);
  rpc ChannelsStatus (Auth) returns (ChannelStatusList);
  rpc ServantsStatus (Auth) returns (ServantStatusList);

  rpc RegisterServant (AttachServant) returns (AttachStatus);
}

message PublishRequest {
  UserCredentials auth = 1;
  VisibilityScope scope = 2;

  string name = 3;
  Zygote operation = 4;

  enum VisibilityScope {
    USER = 0;
    GROUP = 1;
    ALL = 2;
  }
}
